# market-sentinel

./: .env.example  .gitignore  CONTRIBUTING.md  GOAL.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  app.py  build_web_gui.bat  market_sentinel_cli.py  pyproject.toml  requirements-build.txt  requirements-live.txt  requirements-test.txt  requirements.txt  run_gui.bat  run_web_gui.bat  run_web_gui_dev.bat  run_web_gui_prod.bat  verify.py  web_api.py
.github/: CODEOWNERS  actionlint.yaml  dependabot.yml  pull_request_template.md  python-cache-version.txt
.github/workflows/: ci.yml  release.yml  security.yml
core/: atomic_files.py  models.py  storage.py
data/: config.example.json  config.json
deploy/caddy/: Caddyfile.example
deploy/systemd/: market-sentinel-backup.service  market-sentinel-backup.timer  market-sentinel-health.service  market-sentinel-health.timer  market-sentinel-web.service  market-sentinel.conf  market-sentinel.env.example
docs/: BLOCKERS.md  CI_CD.md  GOAL_COMPLETION_AUDIT.md  PLATFORM_SUPPORT.md  POLYMARKET_CREDENTIAL_RUNBOOK.md  POLYMARKET_LIVE_REPORT_DECISION_LEDGER.md  POLYMARKET_LIVE_REPORT_PROMOTION_PROPOSAL.md  POLYMARKET_LIVE_REPORT_REPLAY.md  POLYMARKET_LIVE_REPORT_REVIEW_BUNDLE.md  POLYMARKET_LIVE_REPORT_SCHEMA.md  PRODUCTION_OPERATIONS.md  REPOSITORY_SETTINGS.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
market_adapters/: __init__.py  azuro.py  base.py  betfair.py  catalog.py  crypto_com_predict.py  errors.py  gemini.py  kalshi.py  legacy_web3.py  limitless.py  manifold.py  metaculus.py  myriad.py  opinion.py  polymarket.py  predict_fun.py  predictit.py  registry.py  runtime.py  stub.py  sx_bet.py  types.py  xo.py
polymarket/: __init__.py  accounting.py  analytics_cache.py  auth_readiness.py  bridge.py  clob_auth.py  clob_rest.py  constants.py  coverage.py  credential_runbook.py  data_api.py  endpoints.py  gamma.py  geoblock.py  http_client.py  leaderboard_state.py  live_report_replay.py  live_report_schema.py  live_reports.py  live_verification.py  mdd.py  relayer.py  trader.py  util.py  ws_market.py  ws_sports.py  ws_user.py
scripts/: backup_state.py  build_windows_release.py  ci_enterprise_linux_smoke.py  collect_platform_evidence.py  generate_release_sbom.py  replay_polymarket_live_reports.py  restore_state_backup.py  review_platform_evidence.py  review_polymarket_live_decisions.py  run_platform_evidence.py  sign_windows_release.py  verify_dependency_lock.py  verify_live_validation_report_smoke.py  verify_mobile_web_smoke.py  verify_platform_support.py  verify_polymarket_credentials.py  verify_polymarket_live.py  verify_production_deployment.py  verify_python_dist_artifacts.py  verify_release_assets.py  verify_release_provenance.py  verify_repository_settings.py  verify_service_health.py
tests/: test_adapter_runtime.py  test_additional_official_adapters.py  test_app_logic.py  test_atomic_files.py  test_azuro_adapter.py  test_blockers_doc.py  test_ci_cd_workflows.py  test_cli.py  test_config_examples.py  test_core_models.py  test_crypto_com_predict_adapter.py  test_dependency_lock.py  test_final_parity.py  test_kalshi_adapter.py  test_leaderboard_state.py  test_legacy_web3_adapters.py  test_limitless_adapter.py  test_live_validation_smoke.py  test_manifold_adapter.py  test_market_adapters.py  test_metaculus_adapter.py  test_mobile_web_smoke.py  test_platform_evidence.py  test_platform_evidence_review.py  test_platform_support.py  test_polymarket_adapter.py  test_polymarket_api.py  test_polymarket_clob_wrappers.py  test_polymarket_trader.py  test_predictit_adapter.py  test_production_deployment.py  test_production_operations.py  test_project_metadata.py  test_readme_matrix.py  test_release_assets.py  test_release_provenance.py  test_release_sbom.py  test_release_version_gate.py  test_repository_settings.py  test_run_platform_evidence.py  (+9 more)
tests/fixtures/augur/: market.json  markets.json
tests/fixtures/azuro/: conditions_by_game_ids.json  games_by_filters.json  games_by_ids.json  order_response.json
tests/fixtures/betfair_exchange/: market_book.json  market_catalogue.json  place_order_response.json
(+59 files in other folders)
