[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prediction-market-alert-and-copy-trade-gui"
version = "1.0.1"
description = "Local Tkinter GUI for multi-market prediction-market alerts, wallet tracking, and guarded copy trading."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = { file = "LICENSE" }
authors = [{ name = "prediction-market-alert-and-copy-trade-gui contributors" }]
dependencies = [
    "requests>=2.31.0",
    "truststore>=0.10.0",
    "websocket-client>=1.7.0",
    "python-dotenv>=1.0.0",
    "py-clob-client>=0.34.0",
    "packaging>=24.0",
    "pytest>=8.0",
    "cryptography>=42.0.0",
    "eth-account>=0.13.0",
    "eth-abi>=5.0.0,<6.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[tool.setuptools]
py-modules = ["app", "verify", "web_api"]
packages = ["core", "market_adapters", "polymarket"]
