[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "market-sentinel"
version = "1.0.11"
description = "Local multi-market prediction-market command center for alerts, analytics, paper trading, and guarded copy trading."
readme = "README.md"
requires-python = ">=3.10"
license = "0BSD"
license-files = ["LICENSE"]
authors = [{ name = "MarketSentinel contributors" }]
dependencies = [
    "exceptiongroup>=1.0.2; python_version < '3.11'",
    "requests>=2.31.0",
    "truststore>=0.10.0",
    "websocket-client>=1.7.0",
    "python-dotenv>=1.0.0",
    "packaging>=24.0",
    "cryptography>=42.0.0",
    "eth-account>=0.13.0",
    "eth-abi>=5.0.0,<6.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Programming Language :: Python :: 3.16",
]

[project.optional-dependencies]
build = [
    "build==1.5.0",
    "setuptools==83.0.0",
]
live = [
    "py-clob-client>=0.34.0",
]
test = [
    "pytest>=8.0",
    "coverage[toml]>=7.6",
]

[tool.setuptools]
py-modules = ["app", "verify", "web_api", "market_sentinel_cli"]
packages = ["core", "market_adapters", "polymarket"]

[project.scripts]
market-sentinel = "market_sentinel_cli:main"

[tool.coverage.run]
branch = true
source = ["app", "web_api", "market_sentinel_cli", "core", "market_adapters", "polymarket"]

[tool.coverage.report]
show_missing = true
skip_covered = false
